issue #1 & #2 completed - adjusted header and footer

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,3 +1,9 @@
 {
-  "APP_TITLE": "pixlTrac"
+  "APP_TITLE": "pixlTrac",
+  "ROUTES": {
+    "BACK": "Back",
+    "DASHBOARD": "Dashboard",
+    "SETTINGS": "Settings",
+    "EDIT_CATEGORY": "Edit Category"
+  }
 }
