--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,3 +1,9 @@
 {
-  "APP_TITLE": "pixlTrac"
+  "APP_TITLE": "pixlTrac",
+  "ROUTES": {
+    "BACK": "zurück",
+    "DASHBOARD": "Übersicht",
+    "SETTINGS": "Einstellungen",
+    "EDIT_CATEGORY": "Kategorie bearbeiten"
+  }
 }
