issue #14 edit category

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2,7 +2,7 @@
   "APP_TITLE": "pixlTrac",
   "ROUTES": {
     "BACK": "zurück",
-    "DASHBOARD": "Übersicht",
+    "DASHBOARD": "pixlTrac Übersicht",
     "SETTINGS": "Einstellungen",
     "EDIT_CATEGORY": "Kategorie bearbeiten"
   }
