--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,7 +2,7 @@
   "APP_TITLE": "pixlTrac",
   "ROUTES": {
     "BACK": "Back",
-    "DASHBOARD": "Dashboard",
+    "DASHBOARD": "pixlTrac Dashboard",
     "SETTINGS": "Settings",
     "EDIT_CATEGORY": "Edit Category"
   }
